<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">
           <!-- Lap -->
    <TextView
        android:id="@+id/Lap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/LapStr">
    </TextView>
    <!-- Time -->
	<TextView
	    android:id="@+id/Time"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center_horizontal"
		android:text="@string/TimeStr">
	</TextView>
	<!-- time -->
	<TextView
	    android:id="@+id/LapTime"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:gravity="center_horizontal"
	  	android:text="@string/LapTimeStr">
	</TextView>
<!--Receive  -->
	<TextView
	    android:id="@+id/Receive"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center_horizontal"
	    android:text="@string/ReceiveStr">
	</TextView>
</LinearLayout>
