<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">
    <!-- date -->
    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="50dp"
		android:layout_weight="5"
		android:textSize="15sp"
		android:text="@string/dateCh"
		android:gravity="center">
    </TextView>
    <!-- time -->
     <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="15sp"
		android:layout_weight="4"
		android:text="@string/timeCh"
		android:gravity="center">
    </TextView>
    <!-- laps -->
	<TextView
	    android:id="@+id/laps"
	    android:layout_width="0dp"
	    android:layout_height="50dp"
	    android:textSize="15sp"
	    android:layout_weight="3"
	    android:text="@string/lapsCh"
	    android:gravity="center">
	</TextView>
	<!-- time -->
	<TextView
	    android:id="@+id/tolTime"
	    android:layout_width="0dp"
	    android:layout_height="50dp"
	    android:textSize="15sp"
	    android:layout_weight="4"
	    android:text="@string/TolTimeCh"
	    android:gravity="center">
	</TextView>

	<TextView
	    android:id="@+id/bestTime"
	    android:layout_width="0dp"
	    android:layout_height="50dp"
	    android:textSize="15sp"
	    android:layout_weight="4"
	    android:text="@string/BestLapCh"
	    android:gravity="center">
	</TextView>
	
	<!-- track
	<TextView
	    android:id="@+id/track"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="Track"
	    android:gravity="center_horizontal">
	</TextView> -->
	<!-- RCCar 
	<TextView
	    android:id="@+id/RCCar"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="RCCar"
	    android:gravity="center_horizontal">
	</TextView>-->
	<!-- temperature -->
	<!--  <TextView
	    android:id="@+id/temperature"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1">
	</TextView>-->
	<!-- humidity -->
	<!--  <TextView
	    android:id="@+id/humidity"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1">
	</TextView>-->
</LinearLayout>
