<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <!-- 顶部关于 -->
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#10a9c4"
        android:paddingBottom="@dimen/abc_action_bar_default_padding_end_material" >
        <TextView 
            android:id="@+id/backTv"
            android:text="@string/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@xml/paddingtopbottomleftiszero"
            android:gravity="center"
            android:textSize="20sp" 
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:gravity="center">
       	       <!-- 图标-->
       <ImageView 
        android:id="@+id/head_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/headprotrait"
		android:layout_gravity="center"
		android:gravity="center"/>
    </LinearLayout>
    <!-- APP版本 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="20dp"
	    android:layout_gravity="center"
	    android:gravity="center">
       <TextView
           android:id="@+id/appVersionTv"
           android:layout_width="match_parent"
           android:layout_height="20dp"
           android:text="@string/appVersionStr"
           android:textSize="14sp"
           android:layout_gravity="center"
           android:gravity="center">
       </TextView>
	</LinearLayout>
	<!-- Timer版本 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="20dp"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:orientation="horizontal">
	     <TextView
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:text="@string/timerVersionStr"
           android:textSize="14sp"
           android:layout_gravity="center"
           android:gravity="center">
       </TextView>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:id="@+id/timerVersionTv"
           android:textSize="14sp"/>
	</LinearLayout>
<!-- Timer序列号 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="20dp"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:orientation="horizontal">
	     <TextView
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:text="@string/timerSerialNumStr"
           android:textSize="14sp"
           android:layout_gravity="center"
           android:gravity="center">
       </TextView>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:id="@+id/timerSerialNumTv"
           android:textSize="12sp"/>
	</LinearLayout>
	<!-- 版权说明 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="20dp"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:orientation="horizontal">
	     <TextView
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:text="@string/copyrightStr"
           android:textSize="14sp"
           android:layout_gravity="center"
           android:gravity="center">
       </TextView>
	</LinearLayout>
	<!-- 隐私说明 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:orientation="horizontal">
	     <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/rivacyStr"
           android:textSize="14sp"
           android:layout_gravity="center"
           android:singleLine="false"
           android:gravity="start">
       </TextView>
	</LinearLayout>
</LinearLayout>
