<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/iRl">
	<!-- 标题栏“我” -->
	<RelativeLayout
	   android:layout_width="match_parent"
	   android:layout_height="50dp"
	   android:id="@+id/topName"
	   android:background="@color/colorPrimary">
       <TextView 
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp" 
            android:textColor="#ffffff"/>
       <TextView
	       android:id="@+id/I"
	       android:text="@string/I"
	       android:layout_width="wrap_content"
	       android:layout_height="match_parent"
	       android:layout_centerInParent="true"
	       android:layout_alignParentTop="true"
	       android:layout_gravity="center"
           android:gravity="center"
           android:textSize="20sp" 
	       android:layout_marginTop="5dp"
	       android:textColor="#ffffff"/>
	</RelativeLayout>
	<ScrollView
       android:id="@+id/scrollView1"
       android:layout_width="match_parent"
       android:layout_height="600dp"
       android:layout_below="@+id/topName"
       android:scrollbars="vertical"
       android:layout_marginBottom="50dp">
	 <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="true" 
	   	  android:focusable="true"
          android:orientation="vertical">
           
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	       <!-- 头像  -->
       <ImageView 
        android:id="@+id/head_image_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/headprotrait"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:orientation="vertical">
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:layout_marginTop="10dp"
           android:layout_marginStart="20dp">
               <!-- ID -->
         <TextView
           android:id="@+id/ID"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
           android:text="@string/ID"
           android:textSize="18sp"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:gravity="end">
             <TextView
	           android:id="@+id/ID_view"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="end"
	           android:layout_marginEnd="20dp"
	           android:gravity="end"
	           android:text="@string/NA"
	           android:textSize="18sp"/>
         </LinearLayout>
    
       </LinearLayout>
        <!--昵称  -->
 		<LinearLayout
 		   android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:layout_marginTop="10dp"
           android:layout_marginStart="20dp">
	        <TextView
	         android:id="@+id/nick_name"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/nickname"
	         android:gravity="center_vertical"
	         android:textSize="18sp"/>
	        <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:gravity="end">
             <TextView
	         android:id="@+id/nick_name_view"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="end"
	         android:layout_marginEnd="20dp"
	         android:gravity="end"
	         android:text="@string/NA"
	         android:textSize="18sp"/>
             </LinearLayout>
 		</LinearLayout>
       <!-- 个人信息 -->
		<LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
           <TextView
               android:id="@+id/personal_information"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/personalinfo" 
               android:textSize="18sp"
               android:gravity="center_vertical"/>
               <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:gravity="end">
             <TextView
               android:id="@+id/personal_information_view"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
	           android:layout_marginEnd="20dp"
	           android:gravity="end"
               android:text="@string/NA" 
               android:textSize="18sp"/>  
              </LinearLayout>
           </LinearLayout>
         </LinearLayout>
	</LinearLayout>
	    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@xml/padding"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">
         <!-- 手机 -->
       <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/phone"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"/>
         <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="end">
        <TextView
	        android:id="@+id/phone_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/NA"
	        android:layout_gravity="end"
	        android:layout_marginEnd="20dp"
	        android:gravity="end"
	        android:textSize="18sp"/>
             
         </LinearLayout>
   
    </LinearLayout>
       
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@xml/paddingtopiszero">
       <!-- VIP -->
       <TextView
        android:id="@+id/vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/VIP"/>
         <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="end">
	       <TextView
	        android:id="@+id/vip_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/NA"
	        android:layout_gravity="center_vertical"
	        android:layout_marginEnd="20dp"
	        android:textSize="18sp"/>
       </LinearLayout>
     </LinearLayout>	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="10dp"
	     android:background="@xml/background">
	 </LinearLayout>
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="center_vertical"
         android:background="@xml/padding"
         android:gravity="center_vertical">
         <TextView
         android:id="@+id/device"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_gravity="center_vertical"
         android:text="@string/device"
         android:textSize="12sp"/>
     </LinearLayout>
     <LinearLayout
        android:id="@+id/my_timer_layout"
   	    android:layout_width="match_parent"
   	    android:layout_height="50dp"
   	    android:layout_gravity="center_vertical"
   	    android:gravity="center_vertical"
   	    android:orientation="horizontal"
   	    android:background="@xml/paddingtopiszero">
   	               <!-- 我的计时器 -->
        <TextView
         android:id="@+id/my_timer_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_gravity="center_vertical"
         android:text="@string/mytimer"
         android:textSize="18sp"/>
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/my_rc_layout"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_gravity="center_vertical"
	    android:gravity="center_vertical"
	    android:background="@xml/paddingtopiszero">
	   <!-- 我的RC -->
          <TextView
          android:id="@+id/myrc_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/myrc"
          android:layout_gravity="center_vertical"
          android:textSize="18sp"/>
	</LinearLayout>
	<LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="10dp"
	     android:background="@xml/background">
	 </LinearLayout>
  	<LinearLayout 
         android:layout_width="match_parent"
         android:background="@xml/padding"
         android:layout_height="30dp">
         <TextView
         android:id="@+id/other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_gravity="center_vertical"
         android:text="@string/other"
         android:textSize="12sp"/>
     </LinearLayout>
	<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:background="@xml/paddingtopiszero"
		    android:id="@+id/helpLl">
		   <!-- 使用帮助 -->
           <TextView
           android:id="@+id/help"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_gravity="center_vertical"
           android:text="@string/help"
           android:textSize="18sp"/>
		</LinearLayout>
		<LinearLayout
		   android:layout_width="match_parent"
  		   android:layout_height="50dp"
  		   android:background="@xml/paddingtopiszero"
  		   android:id="@+id/updateLl">
		   <!-- 检查更新 -->
           <TextView
           android:id="@+id/update"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
		   android:textSize="18sp"
		   android:layout_gravity="center_vertical"
           android:text="@string/update"/>
		</LinearLayout>
  		<LinearLayout 
  		    android:layout_width="match_parent"
  		    android:layout_height="50dp"
  		    android:background="@xml/paddingtopiszero"
  		    android:id="@+id/aboutLl">
  		   <!-- 关于 -->
           <TextView
           android:id="@+id/about"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_gravity="center_vertical"
		   android:textSize="18sp"
           android:text="@string/about"/>   
  		</LinearLayout>
		    </LinearLayout>
		</ScrollView>
	
<!-- 底部排版 -->
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:background="@xml/padding"
        android:layout_alignParentBottom="true">
     	<LinearLayout
     	    android:id="@+id/bottomTimer"
     	    android:layout_width="0dp"
     	    android:layout_height="match_parent"
     	    android:orientation="horizontal"
     	    android:layout_weight="1"
     	    android:layout_gravity="center"
     	    android:gravity="center">
     	   <!-- 底部 定时器 -->
     	   <TextView
           
           android:text="@string/timer"
           android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:textSize="18sp"
		   android:layout_gravity="center_vertical"
		   android:gravity="center_vertical"/>   
     	</LinearLayout>
     	
       <LinearLayout
           android:layout_width="0dp"
           android:id="@+id/bottomResults"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center">
           		   <!-- 底部 成绩 -->
		 	<TextView
		       android:text="@string/statistics"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="18sp"
		       android:layout_gravity="center_vertical"
		   	   android:gravity="center"/>
       </LinearLayout>
       
		<LinearLayout
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		     android:id="@+id/bottomRanking"
		    android:layout_weight="1"
		    android:gravity="center">
		     	   <!-- 底部 排名 -->
		   	<TextView
		       android:text="@string/ranking"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"	
		       android:textSize="18sp"
		       android:layout_gravity="center_vertical"
		   	   android:gravity="center"/>
		</LinearLayout>
		<!-- 底部  我 -->
		<LinearLayout
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:id="@+id/bottomI"
		    android:gravity="center">
			  <TextView
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:text="@string/I"
		       android:textSize="18sp" 
		       android:layout_gravity="center_vertical"
		       android:textColor="@color/colorPrimary"
		       android:gravity="center"/>
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>
